Kinda fix overlap bug. Actually generate another bug. Create the user's heart life

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ html {
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .header {
@@ -24,4 +27,82 @@ body {
     border: 1px solid black;
     padding: 5px;
     flex-shrink: 0;
+}
+
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+    flex-grow:  1;
+    flex-shrink: 0;
+    padding: 1px;
+}
+
+
+
+.heart-box {
+    height: 200px;
+    width: 60px;
+    border: 1px solid black;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: black;
+    border-radius: 10px;
+}
+
+.icon {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+}
+
+
+.icon div { 
+    width: 20px;
+    height: 30px;
+    background-color: red;
+    border-top-left-radius: 20px;
+    border-top-right-radius:20px;
+}
+
+
+.left {
+    transform: rotate(-45deg);
+    margin-right: -6px;
+    
+}
+  
+.right {
+    transform: rotate(45deg);
+    margin-left: -6px;
+}
+
+
+
+.user {
+    height: 520px;
+    width: 400px;
+    border: 1px solid black;
+    flex-shrink: 0;
+}
+
+
+.vs {
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+    flex-shrink: 0;
+}
+
+
+footer {
+    border: 1px solid black;
+    padding: 20px 0px;
+    text-align: center;
 }
